# cuco

./: README.md  pyproject.toml
cuco/: cuco_init  init_workload.py  logo.py  site_config.py
cuco/core/: runner.py
cuco/launch/: __init__.py  scheduler.py
cuco/webui/: visualization.py  viz_tree.html
cuco/workload/: __init__.py  eval_runner.py  eval_utils.py  run_utils.py  spec.py
docs/: adding-a-workload.md  architecture.md  fast-path-agent.md  index.html  visualization.md
examples/ds_v3_moe/: evaluate.py
examples/ds_v3_moe/results_ds_v3_moe/: meta_memory.json
tests/: run_gin_test.sh  test_cuda_python_compile.py  test_gin_allreduce.py
workloads/gemm_allgather/: api_docs.md  gemm_allgather.py  gemm_allgather_fused.py  nccl_api_docs.py  spec.json  task_description.md  workload.py
