[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=3.0", "nvidia-nccl-cu13"]
build-backend = "setuptools.build_meta"

[project]
name = "cuco"
version = "0.0.1"
description = "An Agentic Framework for Compute and Communication Co-design"
authors = [
    {name = "Bodun Hu"},
    {name = "Yoga Sri Varshan Varadharajan"},
    {name = "Saurabh Agarwal"},
    {name = "Aditya Akella"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai",
    "numpy",
    "pandas",
    "anthropic",
    "requests",
    "boto3",
    "pydantic",
    "backoff",
    "python-dotenv",
    "instructor",
    "python-Levenshtein",
    "radon",
    "unidiff",
    "dill",
    "hydra-core==1.3.2",
    "matplotlib",
    "networkx",
    "seaborn",
    "moviepy",
    "scikit-learn",
    "adjustText",
    "markdown",
    "aiofiles",
    "google-generativeai",
    "pyyaml",
    "cuda-python>=12.6",
    "cuda-core>=0.6.0",
    "torch>=2.9.1",
    "nccl4py[cu13]",
    "cython>=3.0",
]

[tool.setuptools]
script-files = ["cuco/cuco_launch", "cuco/cuco_visualize", "cuco/cuco_init", "cuco/cuco_run"]

[tool.setuptools.packages.find]
include = ["cuco", "cuco.*"]

[tool.setuptools.package-data]
"*" = ["*"]

[dependency-groups]
dev = [
    "pytest>=6.0",
    "black",
    "isort",
    "flake8",
]
